--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,10 +1,10 @@
 name: C/C++ CI
 
-on:
+on: 
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    tags:
+    - '*'
+
 
 jobs:
   build:
@@ -17,3 +17,8 @@ jobs:
       run: make version
     - name: make
       run: make
+    - name: Create Release
+      uses: ncipollo/release-action@v1.6.1
+      with:
+        artifacts: "dist/a.out"        
+        token: ${{ secrets.GITHUB_TOKEN }}
