--- a/.github/workflows/ccpp_mac.yml
+++ b/.github/workflows/ccpp_mac.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1.6.1
       with:
-        release_name: MyApp Mac
+        name: MyApp Mac
         artifacts: "dist/a.out"        
         token: ${{ secrets.GITHUB_TOKEN }}
