continue on error in create release

--- a/.github/workflows/ccpp_mac.yml
+++ b/.github/workflows/ccpp_mac.yml
@@ -33,6 +33,7 @@ jobs:
       run: make
     - name: Create Release
       uses: ncipollo/release-action@v1.6.1
+      continue-on-error: true
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
